Styles.css angelegt und erste formatierunge eingegeben

--- a/Index.html
+++ b/Index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Titel in Browsertab</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
     <h1>Ich bin eine Überschrift der Größe 1</h1>
-    <p>Ich bin ein Absatz</p>
+    <p class="colorful">Ich <span>bin</span> ein <span class="Absatz">Absatz</span></p>
     <h2>Ich bin eine Überschrift der Größe 2</h2>
     <p>Ich bin ein weiterer Absatz</p>
     <!--Ich bin ein Kommentar-->
